# rsapi

./: .env  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  client.http  docker-compose.yml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: new-function.md
.github/workflows/: rust.yml
.sqlx/: query-23fb3f8ae009e53c29cb85207177b39f96bbe5e48fb27775bf8bbd1d0865e5a0.json  query-9776b66140d9371d18052b1318d26c0a0d7f42ef33f8ae3a3bc866816bf735aa.json
migrations/: 20230819025233_init.down.sql  20230819025233_init.up.sql  20230826014413_families-and-family-members-table.down.sql  20230826014413_families-and-family-members-table.up.sql
src/: infrastructures.rs  interfaces.rs  main.rs
src/entities/: member.rs
src/infrastructures/: router.rs
src/infrastructures/dbs/psql/: connection.rs
src/interfaces/: responses.rs
src/interfaces/controllers/members/: create_member.rs  find_member.rs
src/interfaces/input_data/: create_member.rs
src/interfaces/repositories/: members.rs
src/interfaces/repositories/members/: create_member_repository.rs  find_member_repository.rs
src/use_cases/: members.rs
src/use_cases/members/: create_member.rs  find_member.rs
