[package]
name = "rsapi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.19"
chrono = "0.4.26"
dotenv = "0.15.0"
serde = { version = "1.0.174", features = ["derive"] }
serde_json = "1.0.103"
sqlx = { version = "0.7.1", features = ["runtime-tokio", "tls-rustls", "postgres"] }
tokio = {version  = "1.29.1", features = ["full"]}
